@@ -1,61 +1,0 @@
-<com:TContent ID="Content">
-
-<h1>TDatePicker Samples</h1>
-
-<table class="sampletable">
-
-<tr>
-	<td class="samplenote">Default TDatePicker</td>
-	<td class="sampleaction">
-		<com:TDatePicker />
-	</td>
-</tr>
-
-<tr>
-	<td class="samplenote">Button Mode, pre-selected date</td>
-	<td class="sampleaction">
-		<com:TDatePicker Mode="Button" Date="20-10-2005"/>
-	</td>
-</tr>
-
-<tr>
-	<td class="samplenote">InputMode="DropDownList", custom DateFormat</td>
-	<td class="sampleaction">
-		<com:TDatePicker DateFormat="yyyy/MMM" InputMode="DropDownList"/>
-	</td>
-</tr>
-
-<tr>
-	<td class="samplenote">InputMode="DropDownList", custom DateFormat, Culture</td>
-	<td class="sampleaction">
-		<com:TDatePicker DateFormat="MMM/yyyy" Culture="fr" InputMode="DropDownList"/>
-	</td>
-</tr>
-
-
-<tr>
-	<td class="samplenote">Custom DateFormat, culture, ImageButton mode, pre-selected date</td>
-	<td class="sampleaction">
-		<com:TDatePicker Mode="ImageButton" Culture="zh_CN" 
-			DateFormat="日期：yyyy年M月d日"  
-			Timestamp=<%= @strtotime("-1 year") %>/>
-	</td>
-</tr>
-
-<tr>
-	<td class="samplenote">Custom DateFormat, DropDownList, pre-selected date set in as Text</td>
-	<td class="sampleaction">
-		<com:TDatePicker DateFormat="yyyy/MMMM/dd" Date="2005/05/15" InputMode="DropDownList"/>
-	</td>
-</tr>
-
-<tr>
-	<td class="samplenote">DropDownList, pre-selected date as integer</td>
-	<td class="sampleaction">
-		<com:TDatePicker InputMode="DropDownList" Timestamp=<%= @strtotime("-1 month") %>/>
-	</td>
-</tr>
-	
-</table>
-
-</com:TContent>
