@@ -1,25 +1,0 @@
-
-<com:TContent ID="Content">
-
-	<com:THtmlArea ID="text1" />
-
-	<com:TRequiredFieldValidator 
-		ControlToValidate="text1"
-		ErrorMessage="*" />
-
-	<com:TButton ID="button1" Text="submit 1" />
-
-	<com:TButton ID="button2" Text="submit 2" />
-
-	<com:THtmlArea ID="text2" />
-
-	<com:TRequiredFieldValidator 
-		ControlToValidate="text2"
-		ValidationGroup="group2"
-		ErrorMessage="*" />
-
-	<com:TButton ID="button3" ValidationGroup="group2" Text="submit 3" />
-
-	<com:TButton ID="button4" ValidationGroup="group2" Text="submit 4" />
-
-</com:TContent>
